@@ -425,7 +425,7 @@
 		      <child>
 			<widget class="GtkLabel" id="alt-click-label">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">To _move a window, press-and-hold this key then grab the window:</property>
+			  <property name="label" translatable="yes">To move a window, press-and-hold this key then grab the window:</property>
 			  <property name="use_underline">True</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
